@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Werewolf: Fixed a GUARD issue and made it possible to VISIT yourself.
     * Possibly fixed a rare fatal error.
     * Werewolf: Rewrote WAIT to be more decent.
     * Werewolf: Wounded villagers are now excluded from winning villager count.
